--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
 
   flyway:
     enabled: true
@@ -18,9 +18,6 @@ spring:
 server:
   port: ${PORT:8081}
 
-logging:
-  level:
-    org.springframework.security: TRACE
 
 app:
   security:
@@ -30,3 +27,5 @@ app:
     admin:
       username: ${APP_ADMIN_USER}
       password-hash: ${APP_ADMIN_PASS_HASH}
+    cors:
+      origins: ${APP_CORS_ORIGINS:http://localhost:5173,http://localhost:3000}
