--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5433/portfolio_tracker
+    url: jdbc:postgresql://portfolio_pg:5432/portfolio_tracker
     username: portfolio
     password: portfolio
 
@@ -14,6 +14,7 @@ spring:
 
   security:
     debug: true
+
 
 logging:
   level:
