--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,21 @@
 # ---- Build stage ----
-FROM eclipse-temurin:21-jdk AS build
+FROM maven:3.9-eclipse-temurin-21 AS build
 WORKDIR /app
+
+# Copy only what Maven needs first (better caching)
+COPY pom.xml .
+COPY src ./src
+
+# Build the jar
+RUN mvn -DskipTests clean package
 
 # ---- Run stage ----
 FROM eclipse-temurin:21-jre
 WORKDIR /app
 
-COPY target/*.jar app.jar
+COPY --from=build /app/target/*.jar app.jar
 
-# Render sets PORT; Spring must listen on it
+# Render sets PORT
 ENV PORT=8080
 EXPOSE 8080
 
