--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,31 +1,34 @@
 spring:
   application:
-    name: portfolio-tracker
+    name: portfolio-tracker                        # Application name (used in logs, monitoring, etc.)
 
   datasource:
-    url: ${SPRING_DATASOURCE_URL}
-    username: ${SPRING_DATASOURCE_USERNAME}
-    password: ${SPRING_DATASOURCE_PASSWORD}
+    url: ${SPRING_DATASOURCE_URL}                  # Database JDBC URL (e.g., Render/Postgres)
+    username: ${SPRING_DATASOURCE_USERNAME}        # Database username
+    password: ${SPRING_DATASOURCE_PASSWORD}        # Database password
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: none                              # Disable automatic schema generation (Flyway manages DB)
 
   flyway:
-    enabled: true
-    locations: classpath:db/migration
+    enabled: true                                 # Enable Flyway database migrations
+    locations: classpath:db/migration             # Folder containing migration scripts
 
 server:
-  port: ${PORT:8081}
+  port: ${PORT:8081}                              # Server port (default 8081 if PORT not provided)
 
 
 app:
   security:
     jwt:
-      # Must be at least 32 chars for HS256
-      secret: ${APP_JWT_SECRET}
+      secret: ${APP_JWT_SECRET}                   # JWT signing secret (must be 32+ chars for HS256)
+
     admin:
-      username: ${APP_ADMIN_USER}
-      password-hash: ${APP_ADMIN_PASS_HASH}
+      username: ${APP_ADMIN_USER}                 # Admin login username
+      password-hash: ${APP_ADMIN_PASS_HASH}       # BCrypt hashed admin password
+
     cors:
       origins: ${APP_CORS_ORIGINS:http://localhost:5173,http://localhost:3000}
+      # Allowed frontend origins (comma-separated)
+      # Defaults to local development ports
